# TinyWebsockets

./: CMakeLists.txt  default.nix
tests/: CMakeLists.txt
tests/src/: basic_server_test.cpp  binary_basic_test.cpp  binary_fragmented_test.cpp  close_event_test.cpp  complete_server_test.cpp  copy_assignment_test.cpp  crypto_test.cpp  echo_client_test.cpp  echo_server_test.cpp  error_codes_test.cpp  fragments_echo_test.cpp  long_messages_blockchain_test.cpp  long_messages_test.cpp  messages_benchmark_test.cpp  ping_pong_test.cpp  secured_echo_client_test.cpp  very_long_messages_test.cpp
tiny_websockets_lib/: CMakeLists.txt
